--- a/os/csapp/ass/makefile
+++ b/os/csapp/ass/makefile
@@ -5,7 +5,11 @@ EXE = program
 
 SRC = ./src
 
-CODE = ./src/memory/instruction.c ./src/disk/code.c ./src/main.c
+CODE = ./src/memory/instruction.c ./src/memory/dram.c\
+ 	   ./src/disk/code.c\
+       ./src/cpu/mmu.c\
+       ./src/main.c\
+
 
 .PHONY: program
 
