--- a/os/csapp/ass/makefile
+++ b/os/csapp/ass/makefile
@@ -1,18 +1,25 @@
 CC = D:/gcc/bin/gcc
-CFLAGS = -Wall -g -O2 -Werror -Wformat=0 -std=gnu99
+CFLAGS = -Wall -g -O2 -Werror -Wformat=0 -std=gnu99 -Wno-unused-function
 
-EXE = csapp
+EXE_HARDWARE = exe_hardware
 
-SRC = ./src
+SRC_DIR = ./src
 
-CODE = ./src/memory/instruction.c ./src/disk/code.c ./src/memory/dram.c ./src/cpu/mmu.c  ./src/main.c ./src/cpu/register.c
+# debug
+COMMON = $(SRC_DIR)/common/print.c $(SRC_DIR)/common/convert.c
 
-.PHONY: csapp
+# hardware
+CPU =$(SRC_DIR)/hardware/cpu/mmu.c $(SRC_DIR)/hardware/cpu/isa.c
+MEMORY = $(SRC_DIR)/hardware/memory/dram.c
 
-csapp:
-	$(CC) $(CFLAGS) -I$(SRC) $(CODE) -o $(EXE)
-	./$(EXE)
-#D:/gcc/bin/gcc -Wall -g -O2 -Werror -std=gnu99 -I./src ./src/memory/instruction.c ./src/disk/code.c ./src/main.c -o program
+# main
+MAIN_HARDWARE = $(SRC_DIR)/main_hardware.c
+
+
+.PHONY:hardware
+hardware:
+	$(CC) $(CFLAGS) -I$(SRC_DIR) $(COMMON) $(CPU) $(MEMORY) $(DISK) $(MAIN_HARDWARE) -o $(EXE_HARDWARE)
+	./$(EXE_HARDWARE)
 
 clean:
-	rm -f *.o *~$(EXE)
+	rm -f *.o *~ $(EXE_HARDWARE)
